tests/visual/snapshots/lib__visual__components__error_popup_rendering.snap
---
source: tests/visual/components.rs
description: Error popup overlay
expression: output
---
"┌Main Content────────────────────────────────────┐"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│         ┌Error───────────────────────┐         │"
"│         │Error: Connection to databas│         │"
"│         │Please check your credential│         │"
"│         └────────────────────────────┘         │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
