tests/visual/snapshots/lib__visual__components__layout_splits.snap
---
source: tests/visual/components.rs
description: Three-panel layout split
expression: output
---
"┌Tables (25%)──────┐┌Query Editor (50%)────────────────────┐┌Results (25%)─────┐"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"│                  ││                                      ││                  │"
"└──────────────────┘└──────────────────────────────────────┘└──────────────────┘"
