tests/visual/snapshots/lib__visual__components__table_list_rendering.snap
---
source: tests/visual/components.rs
description: Table list with sample tables
expression: output
---
"┌Tables──────────────────────┐"
"│users                       │"
"│posts                       │"
"│comments                    │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"└────────────────────────────┘"
