tests/visual/snapshots/lib__visual__components__vim_editor_insert_mode.snap
---
source: tests/visual/components.rs
description: Vim editor in insert mode
expression: output
---
"╭Query Editor - INSERT─────────────────╮"
"│SELECT * FROM users                   │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
