tests/visual/snapshots/lib__visual__components__vim_editor_normal_mode.snap
---
source: tests/visual/components.rs
description: Vim editor in normal mode
expression: output
---
"╭Query Editor - NORMAL─────────────────╮"
"│SELECT * FROM users                   │"
"│WHERE active = true                   │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
