tests/visual/snapshots/lib__visual__components__vim_editor_visual_mode.snap
---
source: tests/visual/components.rs
description: Vim editor in visual mode
expression: output
---
"╭Query Editor - VISUAL─────────────────╮"
"│SELECT * FROM users                   │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
